# rear_sensor_array

./: .gitignore  .gitmodules  CANPacket.cpp  CANPacket.h  CMakeLists.txt  MCP2515.cpp  MCP2515.h  MCP2515_nb.h  README.md  accelerometer.cpp  firmware.cpp
Docs/: RSA_report.docx
Firmware/: .gitignore  CMakeLists.txt  firmware.c
Firmware_receiver/: firmware.c
PCB/: Rear_Sensor_Array.kicad_pcb  Rear_Sensor_Array.kicad_pro  Rear_Sensor_Array.kicad_sch
